2012-10-04 Tsi YANG <tsi@in-cite.net>
	* Refactor: Externalised categories process.
	* Refactor: Added hook renderFilegroupExtraFields.
	* Refactor: Coordinated BE and FE dataset's locallang.

2012-10-02 Tsi YANG <tsi@in-cite.net>
	* Fix: Comments error code on pi1.
	* Feature: Added fe_users logo on datastore signle view.

2012-10-01 Tsi YANG <tsi@in-cite.net>
	* Feature: Added "attachment" property on file download.

2012-09-20 Tsi YANG <tsi@in-cite.net>
	* Release version 1.2.0
	
2012-09-20 Tsi YANG <tsi@in-cite.net>
	* Feature: Added files configuration.

2012-09-13 Tsi YANG <tsi@in-cite.net>
	* Feature: Added plugin pi1 new sorting.
	* Feature: Added sorting configuration.

2012-09-11 Tsi YANG <tsi@in-cite.net>
	* Comments: Completed pi1 comments.
	* Feature: Added format's name to file's data on renderFiles.
	* Feature: Added licences selecetde crietria.
	* Fearure: Added filter on update date.

2012-09-10 Tsi YANG <tsi@in-cite.net>
	* Feature: Added filter on licence.
	* Feature: Implemented sorting on research block.
	* Feature: Added filter on crdate and stat download.

2012-09-07 Tsi YANG <tsi@in-cite.net>
	* Feature: Added stat download on list and single view.

2012-09-06 Tsi YANG <tsi@in-cite.net>
	* Fix: Retrieved licence's label.	

2012-08-10 Tsi YANG <tsi@in-cite.net>
	* Feature: Added tiers restriction.
	* Fix: Files error validated infos.

2012-08-09 Tsi YANG <tsi@in-cite.net>
	* Fix: Error validated form marker.
	* Feature: File list column file/url label.
	* Fix: Filemount display.

2012-08-07 Tsi YANG <tsi@in-cite.net>
	* Feature: Added filegroup's title label_userFunc.

2012-08-06 Tsi YANG <tsi@in-cite.net>
	* Feature: Adapted TCA FE Refactoring.

2012-08-02 Tsi YANG <tsi@in-cite.net>
	* Feature: Added configuration :for requireEntryLabel.
	* Feature: Added previous loccalang.

2012-07-30 Tsi YANG <tsi@in-cite.net>
	* Comments: Added singleDatasetOptionList comment.

2012-07-27 Tsi YANG <tsi@in-cite.net>