@@ -216,6 +216,15 @@
 
 
 
+<!--###TEMPLATE_EMPTY_LIST### start-->
+<div class="###PREFIXID###_list">
+	<p>###ANY_DATASET###</p>
+</div>
+<!--###TEMPLATE_EMPTY_LIST### end-->
+
+
+
+
 
 <!-- ###TEMPLATE_SINGLE### start -->
 <div class="###PREFIXID###_single">
